--- a/会议纪要/会议纪要1.md
+++ b/会议纪要/会议纪要1.md
@@ -1,12 +1,12 @@
-#### 会议信息——第一次会议
+## 会议信息——第一次会议
 
-**时间：**2021.10.9   20:00——21:50
+**时间**：2021.10.9   20:00——21:50
 
-**地点：**紫荆一号楼403A
+**地点**：紫荆一号楼403A
 
-**参加人员：**小组全员
+**参加人员**：小组全员
 
-**会议事项：**
+**会议事项**：
 
 1. 是否更换主题
 2. 确定短期分工
@@ -15,7 +15,7 @@
 
 
 
-#### 更换主题：
+### 更换主题：
 
 可供更换的主题：宿舍楼访客管理系统、物品收发管理系统
 
@@ -55,15 +55,15 @@
 
 
 
-#### 短期人员分工：
+### 短期人员分工：
 
 李端：新主题需求文档		李松泽：会议纪要
 
-蒋哲宇：产品定义与故事	范容彰：竞品分析与报告
+蒋哲宇：产品定义与故事	    范容彰：竞品分析与报告
 
 
 
-#### 与助教讨论：
+### 与助教讨论：
 
 将更换主题的想法介绍给助教，并且对于主题进行了较为详细的介绍后，助教对于主题给出了一些建议。助教建议我们仔细考虑工作量的问题，并对我们提出的主题给出了一些功能有部分交集的竞品作为参考。
 
