--- a/会议纪要/会议纪要2.md
+++ b/会议纪要/会议纪要2.md
@@ -1,29 +1,29 @@
-#### 会议信息——第二次会议
+    ## 会议信息——第二次会议
 
-**时间：**2021.10.26	22:30——23:00
+**时间**：2021.10.26	22:30——23:00
 
-**地点：**紫荆一号楼403A
+**地点**：紫荆一号楼403A
 
-**参加人员：**小组全员
+**参加人员**：小组全员
 
-**会议事项：**
+**会议事项**：
 
- 	1. 中期分工
- 	2. 总结小学期开发经验及教训
+1. 中期分工
+2. 总结小学期开发经验及教训
 
 
 
 #### 中期分工
 
-**工作：**用户故事地图、干系人分析、软件原型设计（页面样式设计、前端代码示例）、技术选型（数据库等）
+**工作**：用户故事地图、干系人分析、软件原型设计（页面样式设计、前端代码示例）、技术选型（数据库等）
 
-**预期时间：**2021.10.26—2021.10.31 准备下次集中开发的前期任务
+**预期时间**：2021.10.26—2021.10.31 准备下次集中开发的前期任务
 
-​					2021.11.1（暂定） 关于本项目与楼长进行商谈
+​			  2021.11.1（暂定） 关于本项目与楼长进行商谈
 
-​					2021.11.2 	集中开发，进行上述工作
+​			  2021.11.2 	集中开发，进行上述工作
 
-**分工：**范容彰：页面样式设计			李松泽：干系人分析
+**分工**： 范容彰：页面样式设计			   李松泽：干系人分析
 
 ​			蒋哲宇：前端代码示例			李端：用户故事地图
 
