扫码离开+时间显示+流程图

--- a/流程图.md
+++ b/流程图.md
@@ -6,11 +6,30 @@ sequenceDiagram
 　participant 保安
 　participant 服务器
 　participant 微信服务器
-　同学 -->> 服务器:填写访问信息
-　服务器 -->> 同学:返回到访信息（ID或其他凭证等）
-　同学 -->> 保安:出示到访登记信息（二维码等）
-　保安 -->> 服务器:发送到服务器，验证真实性
-　服务器 -->> 保安:返回验证结果
+　同学 -->> 微信服务器:login登录
+　微信服务器 -->> 同学:返回登录凭证code
+　同学 -->> 服务器:提交访问信息
+　同学 -->> 微信服务器:login登录
+　微信服务器 -->> 同学:返回登录凭证code
+　同学 -->> 保安:出示登录凭证code（二维码）
+　保安 -->> 服务器:发送code到服务器
+　服务器 -->> 微信服务器:发送code获取openid
+　微信服务器 -->> 服务器:返回openid
+　服务器 -->> 保安:返回最新访问信息
+　保安 -->> 服务器:允许访问或禁止访问
+　服务器 -->> 同学:返回结果
+　Note right of 同学:（若允许访问）访问中
+　保安 -->> 服务器:提醒（TODO）
+　服务器 -->> 同学:发送提醒信息（TODO）
+　同学 -->> 微信服务器:login登录
+　微信服务器 -->> 同学:返回登录凭证code
+　同学 -->> 保安:出示登录凭证code（二维码）
+　保安 -->> 服务器:发送code到服务器
+　服务器 -->> 微信服务器:发送code获取openid
+　微信服务器 -->> 服务器:返回openid
+　服务器 -->> 保安:返回最新到访信息
+　保安 -->> 服务器:确认离开
+　服务器 -->> 同学:返回结果
 　
 　
 ```
