--- a/流程图.md
+++ b/流程图.md
@@ -89,8 +89,8 @@ sequenceDiagram
 	服务器 -->> 微信服务器: code2Session
 	微信服务器 -->> 服务器: 获取对应open_id
 	服务器 -->> Guard: 从缓存池中取出open_id对应的记录
-	Guard -->> 服务器: 调用PATCH:log,传递需要更改的参数，对应签入签出
-	服务器 -->> 服务器: if签入：更新缓存池记录,reject则丢弃 \\ if签出：更新缓存池记录，存入z
+	Guard -->> 服务器: 调用POST:log/check,传递需要更改的参数，对应签入签出
+	服务器 -->> 服务器: if签入：更新缓存池记录,reject则丢弃 \\ if签出：更新缓存池记录，存入主数据库
 	
 ```
 
